--- a/website/scalar-v1.html
+++ b/website/scalar-v1.html
@@ -11,7 +11,7 @@
     <!-- Need a Custom Header? Check out this example https://codepen.io/scalarorg/pen/VwOXqam -->
     <script
       id="api-reference"
-      data-url="https://cdn.jsdelivr.net/npm/@scalar/galaxy/dist/latest.yaml"></script>
+      data-url="/v1-openapi3.1.yml"></script>
     <script src="https://cdn.jsdelivr.net/npm/@scalar/api-reference"></script>
   </body>
 </html>
